Closes #555 fixed bookmarks layout issue (pagination jump was already fixed)

--- a/media/css/all.css
+++ b/media/css/all.css
@@ -3441,7 +3441,6 @@ ul.messages {
 }
 
 .bookmark_info{
-    width:525px;
     height:25px;
     vertical-align:middle;
     font-size:12px;
